code now has auto-scrollbars. Prevents wobbly mobile pages, too.

--- a/otterwiki/static/css/otterwiki.css
+++ b/otterwiki/static/css/otterwiki.css
@@ -78,7 +78,7 @@ pre,
     line-height: 1.5;
     padding: 0.1rem 0.5rem;
     margin: 0 0.1rem;
-    white-space: pre-wrap;
+    overflow: auto;
 }
 .dark-mode code,
 .dark-mode pre,
